2003-08-10  Karl Berry  <karl@gnu.org>

	* regex.h: update from libc (whitespace fix).

2003-08-09  Paul Eggert  <eggert@twinsun.com>

	Merge some files from coreutils.  These changes were
	originally made by Jim Meyering.
	* lib/acl.c: Include <sys/types.h> before <sys/stat.h>;
	many older Unixes require this.
	* lib/alloca.c (alloca): Remove cast to argument of free;
	no longer needed in C89.
	* lib/alloca_.h, lib/regex.h: Fix white space to match
	what GNU indent does.

2003-08-05  Paul Eggert  <eggert@twinsun.com>

	* bumpalloc.h: Remove.

2003-08-04  Paul Eggert  <eggert@twinsun.com>

	* getloadavg.c: Change copyright notice and spacing to conform to
	GNU coding style.

	Merge from coreutils.
	* error.c [!USE_IN_LIBIO]: Omit this case; assume USE_IN_LIBIO is 1.
	From glibc.
	* getdate.y (date): Also accept dates like May-23-2003; suggestion
	from Karl Berry, implemented by Jim Meyering.
	* getgroups.c: Include "xalloc.h" instead of declaring xalloc fns;
	from Dmitry V. Levin.
	Remove anachronistic cast of xrealloc.
	* fnmatch_.h (__const): Remove.  Use 'const'.
	* fnmatch_loop.c (NEW_PATTERN): Cast alloca return value to proper
	type. Otherwise, it wouldn't compile with at least /bin/cc on
	ymp-cray-unicos9.0.2.X.
	Combine two mostly-identical uses of alloca into one.
	Thanks to the Cray-Cyber project for access to a Cray Y-MP.

2003-08-04  Dave Love <d.love@dl.ac.uk>

	[From Emacs.]

	* getloadavg.c: Check `__unix' as well as `unix'.  Use #ifdef, not
	#if.  Check HAVE_LIBKSTAT as well as LOAD_AVE_TYPE.  Check
	F_SETFD, not FD_SETFD.  Use HAVE_STRUCT_NLIST_N_UN_N_NAME, not
	obsolete NLIST_NAME_UNION.
	[__GNU__]: Undef BSD and FSCALE.
	[!NLIST_STRUCT]: Remove conditional definition of NLIST_STRUCT.

2003-08-03  Paul Eggert  <eggert@twinsun.com>

	* stdbool_.h (_Bool): Make it signed char, instead of
	an enum type, so that it's guaranteed to promote to int.  See:
	<http://mail.gnu.org/archive/html/bug-gnulib/2003-07/msg00124.html>
